# hedgehog-lockstep

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  hedgehog-lockstep.cabal
.github/workflows/: ci.yml
docs/: DESIGN.md
src/Hedgehog/: Lockstep.hs
src/Hedgehog/Lockstep/: Command.hs  Examples.hs  GVar.hs  Observe.hs  Op.hs  Property.hs  State.hs
test/: Main.hs
test/Test/: BuggyCounter.hs  CustomOp.hs  HandleStore.hs  KVStore.hs  LabelledExamples.hs  Observation.hs  OpProjections.hs  ParallelKV.hs  PureSort.hs  ReaderKV.hs  UnitCoverage.hs
